# expense_tracker_api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-1cd531ced3b5deae664cc0fed448532cefbc963a9a959fe18d51e900d3f38c1e.json  query-3e64d897b8e3f4afb06b3d0ae2c5a13a86ff19f3d373dffe0f540d198e04a889.json  query-569ca56ab02d2785c96159f9ad4d2fc58c75edd998f0c2c3d6f7da7c9841b4aa.json  query-5ed26d2c535de67ec1b8fbf00a65a396d449ef86a888d0cd1a88fd5973968d17.json  query-a9aca374e5fd6317d12da73dbba1e731e9f95e5f5276174c05108315a601f181.json  query-f457f5580daa94d5eca74302f78fdf20029526d432e2faa61de7ccaef286dbfc.json
migrations/: 001_initial.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/handlers/: auth.rs  expense.rs  health.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: expense.rs  user.rs
src/routes/: api.rs  health.rs  mod.rs
src/utils/: jwt.rs  password.rs
tests/: integration_test.rs
