[package]
name = "expense_tracker_api"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
tower-http = { version = "0.6", features = ["trace"] }
[dev-dependencies]
tower = "0.5"
hyper = "1"
http-body-util = "0.1"
mime = "0.3"
